--- a/Bootcamp_Week_1_Challenge/index.html
+++ b/Bootcamp_Week_1_Challenge/index.html
@@ -16,7 +16,7 @@
                 <a href="./index.html" id="navbar_logo"><img src="images/logo.png" alt="india_spice_logo" id="logo">India Spice</a> 
                 <a href="./index.html">Home</a>
                 <a href="./sub_pages/menu.html">Menu</a>
-                <a href="#">Locations</a>
+                <a href="./sub_pages/contact.html">Contact</a>
             </nav>
         </nav>
         <section class="page">
