--- a/Bootcamp_Week_1_Challenge/sub_pages/menu.html
+++ b/Bootcamp_Week_1_Challenge/sub_pages/menu.html
@@ -17,7 +17,7 @@
                 <a href="../index.html" id="navbar_logo"><img src="../images/logo.png" alt="india_spice_logo" id="logo">India Spice</a> 
                 <a href="../index.html">Home</a>
                 <a href="menu.html">Menu</a>
-                <a href="#">Locations</a>
+                <a href="./contact.html">Contact</a>
             </nav>
         </nav>
         <h1>Menu</h1>
